# devnet-faucet

./: Anchor.toml  README.md  package.json
app/: package-lock.json
app/src/: App.js
app/src/components/Airdrop/: index.js
programs/spl-token-faucet/: Cargo.toml
programs/spl-token-faucet/src/: lib.rs
setup/: token_airdrop.js
tests/: spl-token-faucet.ts
